--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=springstarthere
 name.service.url=http://localhost:8080
+
+spring.datasource.url=jdbc:mysql://localhost/schema_name?
+useLegacyDatetimeCode=false&serverTimezone=UTC
+
+spring.datasource.username=root
+spring.datasource.password=
+spring.sql.init.mode=always
